...
            android:id="@+id/listViewLayout"
            android:orientation="horizontal">

            <com.baoyz.swipemenulistview.SwipeMenuListView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/bandNames"
                android:stackFromBottom="false"
                android:layout_gravity="top"
                android:background="#ffffffff"
                android:clickable="true"
                android:cacheColorHint="@android:color/transparent"
                android:listSelector="@android:color/transparent"
...
